--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -199,7 +199,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
             </intent-filter>
-            <intent-filter android:priority="13">
+            <intent-filter android:priority="12">
                 <action android:name="com.android.settings.action.SETTINGS"/>
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
@@ -3567,6 +3567,27 @@
         <activity
             android:name=".aospextended.profiles.NFCProfileSelect"
             android:label="@string/profile_select"
-            android:excludeFromRecents="true"/>
+	    android:excludeFromRecents="true"/>
+
+        <activity android:name="Settings$RootManagementActivity"
+                android:label="@string/rootmanagement_title"
+                android:icon="@drawable/ic_settings_rootmanagement"
+                android:taskAffinity="" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="3">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.homepage"/>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.RootManagement" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/rootmanagement_dashboard_summary" />
+        </activity>
+
     </application>
 </manifest>
