--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -189,7 +189,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
             </intent-filter>
-            <intent-filter android:priority="10">
+            <intent-filter android:priority="11">
                 <action android:name="com.android.settings.action.SETTINGS"/>
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
@@ -3123,6 +3123,20 @@
         </activity>
 
         <!-- End of information architecture host activities -->
+
+	<activity android:name=".Settings$XtensionsActivity"
+                  android:label="@string/xtensions_title"
+                  android:icon="@drawable/ic_settings">
+            <intent-filter android:priority="10">
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.homepage"/>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.xtended.xtensions.Xtensions"/>
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/xtensions_activity_summary"/>
+        </activity>
 
         <service
             android:name=".SettingsDumpService"
