Gesture Anywhere [3/3] Source- https://github.com/ValidusOs/packages_apps_Settings/commit/8da6a2ea960fe915d88d94191242834b79aa4020#diff-a48d6def78e18cbabab3c95ae3c9fc49

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3054,6 +3054,10 @@
                 android:value="com.android.settings.webview.WebViewAppPicker" />
         </activity-alias>
 
+        <!-- Gesture Anywhere -->
+        <activity android:name="com.xtended.xtensions.gestureanywhere.GestureAnywhereBuilderActivity" />
+        <activity android:name="com.xtended.xtensions.gestureanywhere.GestureAnywhereCreateGestureActivity" /> 
+		
         <activity android:name=".backup.BackupSettingsActivity"
                   android:label="@string/privacy_settings_title"
                   android:icon="@drawable/ic_settings_backup"
