--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -424,6 +424,17 @@
                 android:value="com.android.settings.gestures.AssistGestureSettings" />
         </activity>
 
+        <service
+            android:exported="false"
+            android:enabled="true"
+            android:name="com.xtended.xtensions.service.EventService" />
+        <receiver android:name="com.xtended.xtensions.service.BootCompletedReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
         <!-- Keep compatibility with old shortcuts. -->
         <activity-alias android:name=".bluetooth.BluetoothSettings"
                 android:label="@string/bluetooth_settings_title"
