--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -91,6 +91,13 @@
     <uses-permission android:name="android.permission.NAVIGATION_EDITOR" />
     <uses-permission android:name="android.permission.ACCESS_FONT_MANAGER" />
 
+    <uses-permission android:name="android.permission.MODIFY_PROFILES" />
+    <uses-permission android:name="android.permission.MANAGE_REMOTE_PREFERENCES" />
+
+    <protected-broadcast android:name="lineageos.platform.intent.action.PROFILE_SELECTED" />
+    <protected-broadcast android:name="lineageos.platform.intent.action.PROFILE_UPDATED" />
+    <protected-broadcast android:name="lineageos.platform.app.profiles.PROFILES_STATE_CHANGED" />
+
     <application android:label="@string/settings_label"
             android:icon="@drawable/ic_launcher_settings"
             android:taskAffinity=""
@@ -167,7 +174,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
             </intent-filter>
-            <intent-filter android:priority="11">
+            <intent-filter android:priority="14">
                 <action android:name="com.android.settings.action.SETTINGS"/>
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
@@ -192,7 +199,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
             </intent-filter>
-            <intent-filter android:priority="11">
+            <intent-filter android:priority="13">
                 <action android:name="com.android.settings.action.SETTINGS"/>
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
@@ -3120,7 +3127,7 @@
         <activity android:name=".Settings$AppAndNotificationDashboardActivity"
                   android:label="@string/app_and_notification_dashboard_title"
                   android:icon="@drawable/ic_apps">
-            <intent-filter android:priority="9">
+            <intent-filter android:priority="12">
                 <action android:name="com.android.settings.action.SETTINGS"/>
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
@@ -3525,5 +3532,41 @@
                        android:resource="@string/summary_empty"/>
         </activity>
         <!-- This is the longest AndroidManifest.xml ever. -->
+
+        <activity android:name=".Settings$SystemProfilesActivity"
+            android:label="@string/sp_profiles_settings_title"
+            android:icon="@drawable/ic_settings_profiles"
+            android:taskAffinity="com.android.settings"
+            android:parentActivityName="Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="11">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.homepage" />
+            <meta-data android:name="com.android.settings.title"
+                android:resource="@string/sp_profiles_settings_title" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/sp_profiles_settings_summary" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.aospextended.profiles.ProfilesSettingsFragment" />
+        </activity>
+
+        <activity android:name=".aospextended.profiles.NFCProfile">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="lineage/profile" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".aospextended.profiles.NFCProfileSelect"
+            android:label="@string/profile_select"
+            android:excludeFromRecents="true"/>
     </application>
 </manifest>
