--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3456,6 +3456,19 @@
                 android:value="com.android.settings.aoscp.display.ColorManagerFragment" />
         </activity>
 
+        <!-- PA Pie settings activity. -->
+        <activity android:name="Settings$PieControlSettingsActivity"
+                android:label="@string/pa_pie_control_title"
+                android:excludeFromRecents="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.android.settings.PIE_SETTINGS" />
+                <action android:name="android.settings.PIE_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.xtended.xtensions.fragments.PieSettings" />
+        </activity>
+
         <!-- Global navbar settings -->
         <activity android:name="Settings$NavigationSettingsActivity"
                 android:label="@string/bottom_nav_navigation_title"
