Add ability to permanently hide apps from recents [2/3]

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3423,5 +3423,8 @@
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/x_settings_summary"/>
         </activity>
+        <!-- So why not make it longer and add Carbon Features? -->
+        <!-- Hide Apps from Recents (HAFR) -->
+        <activity android:name="com.msm.xtended.fragments.hideappfromrecents.HAFRAppListActivity" />
     </application>
 </manifest>
