--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -95,6 +95,7 @@
     <uses-permission android:name="android.permission.TEST_BLACKLISTED_PASSWORD" />
     <uses-permission android:name="android.permission.USE_RESERVED_DISK" />
     <uses-permission android:name="android.permission.MANAGE_SCOPED_ACCESS_DIRECTORY_PERMISSIONS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:label="@string/settings_label"
             android:icon="@drawable/ic_launcher_settings"
@@ -3426,5 +3427,29 @@
         <!-- So why not make it longer and add Carbon Features? -->
         <!-- Hide Apps from Recents (HAFR) -->
         <activity android:name="com.msm.xtended.fragments.hideappfromrecents.HAFRAppListActivity" />
+
+        <!-- Custom Button Settings -->
+        <activity android:name=".Settings$XOTASettingsActivity"
+                android:label="@string/xtended_update_settings_title"
+                android:excludeFromRecents="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.xtended.settings.fragments.about.Update" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+        </activity>
+        <service android:name="com.xtended.settings.fragments.about.update.scheduler.OTAService" />
+        <receiver android:name="com.commonsware.cwac.wakeful.AlarmReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+            <meta-data
+                android:name="com.commonsware.cwac.wakeful"
+                android:resource="@xml/wakeful"/>
+        </receiver>
+
     </application>
 </manifest>
