--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3137,6 +3137,10 @@
                 android:value="com.android.settings.webview.WebViewAppPicker" />
         </activity-alias>
 
+        <!-- Gesture Anywhere -->
+        <activity android:name="com.msm.xtended.gestureanywhere.GestureAnywhereBuilderActivity" />
+        <activity android:name="com.msm.xtended.gestureanywhere.GestureAnywhereCreateGestureActivity" /> 
+
         <activity android:name=".backup.BackupSettingsActivity"
                   android:label="@string/privacy_settings_title"
                   android:icon="@drawable/ic_settings_backup"
